# mlp-conf

./: MANIFEST.in  README.md  project.cfg  pyproject.toml  tox.ini
src/mlp_conf/: argparse.py  cli.py  config.py  envvar.py
src/mlp_conf.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/adhoc/: project.cfg  quick_test.py
tests/mlp_conf/: test_argparse.py  test_config.py
tests/unit/mlp_conf/: test_argparse.py
