[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mlp_conf"
version = "0.1.0"
description = "MLP Configuration Utility"
authors = [{ name = "Your Name" }]
license = { file = "LICENSE" }
dependencies = [
    "tabulate"
]
requires-python = ">=3.10"

[project.scripts]
mlp-conf-list-params = "mlp_conf.cli:main"